Add 一括整形・デバッグスクリプト fix を追加

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2"
+  },
+  "scripts": {
+    "fix": "prettier --write . && eslint --fix ."
   }
 }
